[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/autoloads/DataManager.gd" type="Script" id=1]
[ext_resource path="res://addons/PersistenceNode/persistence_node.gd" type="Script" id=2]
[ext_resource path="res://addons/rpg_elements/nodes/RPGHelper.gd" type="Script" id=3]

[node name="DataManager" type="Node"]
script = ExtResource( 1 )

[node name="DataGlobalConfig" type="Node" parent="."]
script = ExtResource( 2 )
mode = 1

[node name="DataUserConfig" type="Node" parent="."]
script = ExtResource( 2 )
mode = 1

[node name="DataPlayers" type="Node" parent="."]
script = ExtResource( 2 )
mode = 1

[node name="DataInventories" type="Node" parent="."]
script = ExtResource( 2 )
mode = 1

[node name="DataStats" type="Node" parent="."]
script = ExtResource( 2 )
mode = 1

[node name="RPGHelper" type="Node" parent="."]
script = ExtResource( 3 )

